--- a/ato/report_ia/templates/voorval_ingave.html
+++ b/ato/report_ia/templates/voorval_ingave.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load staticfiles %}
 {% block content %}
 <style type="text/css">
     .ingave-class{
@@ -7,6 +8,12 @@
 	body: 900px;
     }
 </style>
+	  <script type="text/javascript" src="{% static "js/jquery.js" %}" />
+ <script>
+$(document).ready(function() {
+    $('.datepicker').datepicker();
+});
+  </script>
 <div class="page-header">
 	{% if action == 'create' %}
 	<h4><span class="label label-default"> Aanmaken </span></h4>
