--- a/ato/report_ia/templates/export_table.html
+++ b/ato/report_ia/templates/export_table.html
@@ -8,7 +8,9 @@
     }
 </style>
 <div class="page-header">
- Exporteren data
+	<h4><span class="label label-default"> Exporteren </span></h4>
+	<h4><span class="label label-default"> {{user.username}} </span></h4>
+	<h4><span class="label label-default"> {{club}} </span></h4>
 </div>
 
 <div class="page-menu">
