added a class to better handle ATO permissions added some icons thanks to bootstrap3 when a registration has been done, an email will be sent to all responsibles on registration completeion, a new page will be given, which indeicates that an email has been sent and the registration has been saved

--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -15,7 +15,7 @@
 <ul class="breadcrumb">
 	<li><a href="{% url 'report_ia:voorval_create' %}">Nieuw voorval</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
-{% if user.is_superuser %}
+{% if ausr.is_super %}
 	<li><a href="{% url 'report_ia:voorval_overzicht' %}">Totalen</a></li>
 	<li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
 	<li><a href="{% url 'admin:index' %}">Administrator</a></li>
@@ -43,8 +43,8 @@
 	    <td>{{ voorval.type_voorval }}</td>
 	    <td>{{ voorval.opleiding }}</td>
 	    <td>{{ voorval.synopsis }}</td>
-	    <td><a href="{% url 'report_ia:voorval_update' voorval.id %}">edit</a></td>
-	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}">delete</a></td>
+	    <td><a href="{% url 'report_ia:voorval_update' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
+	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a></td>
 	   </tr>
            {% endfor %}
 	  </tbody>
