added breadcrumbs to confirm page added colour to overzicht table for recent registrations (< 7 days)

--- a/ato/report_ia/templates/voorval_confirm_delete.html
+++ b/ato/report_ia/templates/voorval_confirm_delete.html
@@ -10,9 +10,15 @@
 <div class="page-header">
 Verwijderen voorval
 </div>
+<div class="page-menu">
+<ul class="breadcrumb">
+	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'logout' %}">Afmelden</a></li>
+</ul>
+</div>
 <div class="ingave-class">
    <form  class="form-vertical" "method="POST">{% csrf_token %}
-	  Are you sure you want to delete "{{ object }}" ?
+	  Are you sure you want to delete "{{ object.ingave }}" ?
         {% buttons submit='Verwijderen' reset="Cancel" layout='horizontal' %}{% endbuttons %}
     </form>
 </div>
