--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -37,7 +37,11 @@
         </thead>
         <tbody>
 	  {% for voorval in object_list %}
-	  <tr>
+	  {% if voorval.is_recent %}
+	    <tr class="warning">
+	  {% else %}
+	    <tr>
+	  {% endif %}
 	    <td>{{ voorval.club }}</td>
 	    <td>{{ voorval.ingave }}</td>
 	    <td>{{ voorval.type_voorval }}</td>
