completed actions on maatregelen extra actions buttons on 'voorvallen overzicht' link to maatregelen + add a maatregel

--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -7,10 +7,9 @@
     <title>LVZC ATO</title>
     {% load bootstrap3 %}
     {% bootstrap_css %}
-    {% bootstrap_javascript %}
-
   </head>
   <body>
+    {% block title %}ATO incidenten/accidenten registraties{% endblock %}
    <div class="container">
     {% block content %}
     {% endblock %}
