--- a/ato/report_ia/templates/maatregel_ingave.html
+++ b/ato/report_ia/templates/maatregel_ingave.html
@@ -21,7 +21,7 @@
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:maatregel_lijst' %}">Overzicht</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
