--- a/ato/report_ia/templates/maatregel_lijst.html
+++ b/ato/report_ia/templates/maatregel_lijst.html
@@ -38,10 +38,10 @@
         </thead>
         <tbody>
 	  {% for maatregel in object_list %}
-	    <td>{{ maatregel.voorval.club }}</td>
-	    <td>{{ maatregel.voorval.datum }}</td>
-	    <td>{{ maatregel.voorval.synopsis }}</td>
-	    <td>{{ maatregel.omschrijving }}</td>
+	    <td>{{ maatregel.voorval.club.naam_kort }}</td>
+	    <td>{{ maatregel.voorval.datum|date:"SHORT_DATE_FORMAT" }}</td>
+	    <td>{{ maatregel.voorval.synopsis|truncatewords:20 }}</td>
+	    <td>{{ maatregel.omschrijving|truncatewords:20 }}</td>
 	    <td><a href="{% url 'report_ia:maatregel_update' maatregel.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
 	    <td><a href="{% url 'report_ia:maatregel_delete' maatregel.id %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a></td>
 	   </tr>
