fixed what a specific user (ato_admin, ato_user and ato_super) can do this can be found in the templates and the views. there exists also a class in utilities.py for this matter

--- a/ato/report_ia/templates/export_table.html
+++ b/ato/report_ia/templates/export_table.html
@@ -15,7 +15,7 @@
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:voorval_list' %}">Voorvallen</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
