--- a/ato/report_ia/templates/maatregel_lijst.html
+++ b/ato/report_ia/templates/maatregel_lijst.html
@@ -14,9 +14,9 @@
 <div class="page-menu">
 <ul class="breadcrumb">
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
-{% if ausr.is_super %}
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:voorval_list' %}">Voorvallen</a></li>
 	<li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
+{% if ausr.is_super %}
 	<li><a href="{% url 'admin:index' %}">Administrator</a></li>
 {% endif %}
 </ul>
