--- a/ato/report_ia/templates/voorval_confirm_delete.html
+++ b/ato/report_ia/templates/voorval_confirm_delete.html
@@ -7,19 +7,23 @@
 	body: 900px;
     }
 </style>
-<div class="page-header">
-Verwijderen voorval
+<div class="ingave-lijst">
+<h4><span class="label label-default"> {{user.username}} </span></h4>
+<h4><span class="label label-default"> {{club}} </span></h4>
 </div>
+
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht voorvallen</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
 <div class="ingave-class">
-   <form  class="form-vertical" "method="POST">{% csrf_token %}
-	  Are you sure you want to delete "{{ object.ingave }}" ?
-        {% buttons submit='Verwijderen' reset="Cancel" layout='horizontal' %}{% endbuttons %}
+   <form  class="form-vertical" method="POST">{% csrf_token %}
+	  Bent u zeker dat u het voorval met omschrijving <br> 
+	  <code>{{ object.synopsis|truncatewords:10 }}</code><br>
+	  wilt verwijderen?
+        {% buttons submit='Verwijderen' layout='horizontal' %}{% endbuttons %}
     </form>
 </div>
 {% endblock %}
