bug fix in handling updates/insertion of maatregeln. They redirected to a list of all maatregelen, instead of maatregelen for a specific voorval added javascript stuff, like a datepicker and popups for help_text ->doesn't work quite good, the old help-texts are still being displayed on the form

--- a/ato/report_ia/templates/maatregel_ingave_bevestiging.html
+++ b/ato/report_ia/templates/maatregel_ingave_bevestiging.html
@@ -20,7 +20,7 @@
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id%}">Maatregelen</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
