--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LVZC ATO</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     {% load bootstrap3 %}
     {% bootstrap_css %}
+    {% bootstrap_javascript %}
   </head>
   <body>
+
    <div class="container">
     {% block content %}
     {% endblock %}
