--- a/ato/report_ia/templates/export_table.html
+++ b/ato/report_ia/templates/export_table.html
@@ -7,6 +7,12 @@
 	body: 900px;
     }
 </style>
+<script>
+$(document).ready(function() {
+	$('.has-popover').popover({'trigger':'hover'});
+	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
+});
+</script>
 <div class="page-header">
 	<h4><span class="label label-default"> Exporteren </span></h4>
 	<h4><span class="label label-default"> {{user.username}} </span></h4>
