--- a/ato/report_ia/templates/maatregel_confirm_delete.html
+++ b/ato/report_ia/templates/maatregel_confirm_delete.html
@@ -14,7 +14,7 @@
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:maatregel_lijst' %}">Overzicht maatregelen</a></li>
+	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id%}">Overzicht maatregelen</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
