--- a/ato/report_ia/templates/maatregel_ingave.html
+++ b/ato/report_ia/templates/maatregel_ingave.html
@@ -8,7 +8,13 @@
 	body: 900px;
     }
 </style>
+ <script>
+$(document).ready(function() {
+	$('.has-popover').popover({'trigger':'hover'});
+	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
+});
   </script>
+
 <div class="page-header">
 	{% if action == 'create' %}
 	<h4><span class="label label-default"> Aanmaken Maatregel</span></h4>
@@ -21,7 +27,11 @@
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:maatregel_lijst' %}">Overzicht</a></li>
+      {% if action == 'create' %}	
+	<li><a href="{% url 'report_ia:maatregel_lijst' %} ">Overzicht</a></li>
+      {% elif action == 'update' %}
+	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id %} ">Overzicht</a></li>
+      {% endif %}
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
