--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -38,7 +38,7 @@
                 <th>Opleiding</th>
                 <th>Synopsis</th>
 {% if ausr.is_admin or ausr.is_super%}
-	        <th colspan="2">Acties Voorval</th>
+	        <th colspan="1>Acties Voorval</th>
 	        <th colspan="2">Acties Maatregel</th>
 {% endif %}
             </tr>
@@ -62,11 +62,15 @@
 	    <td>{{ voorval.synopsis|truncatewords:20 }}</td>
 {% if ausr.is_admin or ausr.is_super%}
 	    <td><a href="{% url 'report_ia:voorval_update' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-pencil"></span></a></td>
+{% endif %}
+{% if ausr.is_super %}
             {% if voorval.aantal_maatregelen %}
 	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm disabled"><span class="glyphicon glyphicon-trash"></span></a></td>
             {% else %}
 	    <td><a href="{% url 'report_ia:voorval_delete' voorval.id %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a></td>
             {% endif %}
+{% endif %}
+{% if ausr.is_admin or ausr.is_super %}
 	<td><a href="{% url 'report_ia:maatregel_create' voorval.id %}" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus-sign"></span></a></td>
 	<td><a href="{% url 'report_ia:maatregel_lijst' voorval.id %}" class="btn btn-success btn-sm"><span class="badge">{{ voorval.aantal_maatregelen }}</span></a></td>
 {% endif %}
