fixed wring url reverse codes to voorval_list added home page, which contains messages, comming from the databse table Nieuws message can be specific for a group, or a user

--- a/ato/report_ia/templates/maatregel_ingave_bevestiging.html
+++ b/ato/report_ia/templates/maatregel_ingave_bevestiging.html
@@ -25,6 +25,7 @@
 </ul>
 </div>
 <div class="ingave-class">
+{% if not mail_failed %}
 <p><h2>Uw maatregel werd opgeslagen
 	 en een email verzonden naar de verantwoordelijke
 	 ATO safety en AHoT's van uw club</h2>
@@ -34,6 +35,9 @@
 	    <li class="list-group-item" >{{ email }}
 	  {% endfor %}
 	  </ul>
+ {% endif %}
+{% else %}
+<p><h2>Uw maatregel werd opgeslagen
 {% endif %}
 
 </div>
