--- a/ato/report_ia/templates/voorval_confirm_delete.html
+++ b/ato/report_ia/templates/voorval_confirm_delete.html
@@ -14,7 +14,7 @@
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht voorvallen</a></li>
+	<li><a href="{% url 'report_ia:voorval_lijst' %}">Overzicht voorvallen</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
