--- a/ato/report_ia/templates/voorval_overzicht.html
+++ b/ato/report_ia/templates/voorval_overzicht.html
@@ -17,7 +17,7 @@
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 {% if ausr.is_super %}
 	<li><a href="{% url 'report_ia:voorval_overzicht' %}">Totalen</a></li>
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:voorval_lijst' %}">Overzicht</a></li>
 	<li><a href="{% url 'admin:index' %}">Administrator</a></li>
 {% endif %}
 </ul>
