--- a/ato/report_ia/templates/home.html
+++ b/ato/report_ia/templates/home.html
@@ -1,37 +1,43 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load staticfiles %}
 {% block content %}
 <style type="text/css">
-    .export-class{
+    .ingave-class{
     	margin: 20px;
 	body: 900px;
     }
 </style>
-<script>
+ <script>
 $(document).ready(function() {
 	$('.has-popover').popover({'trigger':'hover'});
 	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
 });
-</script>
+  </script>
 <div class="page-header">
-	<h4><span class="label label-default"> Exporteren </span></h4>
+	<h4><span class="label label-default"> Start pagina </span></h4>
 	<h4><span class="label label-default"> {{user.username}} </span></h4>
 	<h4><span class="label label-default"> {{club}} </span></h4>
 </div>
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:home' %}">Start pagina</a></li>
+	<li><a href="{% url 'report_ia:voorval_create' %}">Nieuw voorval</a></li>
 	<li><a href="{% url 'report_ia:voorval_lijst' %}">Voorvallen</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
+{% if ausr.is_super or ausr.is_admin %}
+	<li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
+{% endif %}
+{% if ausr.is_super %}
+	<li><a href="{% url 'report_ia:voorval_overzicht' %}">Totalen</a></li>
+	<li><a href="{% url 'admin:index' %}">Administrator</a></li>
+{% endif %}
 </ul>
 </div>
 
-<div class="export-class">
-   <form  class="form-vertical" method="POST">
-        {% csrf_token %}
-        {% bootstrap_form form layout="vertical" %}
-        {% buttons submit='Uitvoeren' reset="Cancel" layout='horizontal' %}{% endbuttons %}
-    </form>
+<div class="ingave-class">
+{% for artikel in data %}
+  {{ artikel|safe }}
+{% endfor %}
 </div>
 {% endblock %}
