--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -13,10 +13,11 @@
 </div>
 <div class="page-menu">
 <ul class="breadcrumb">
+	<li><a href="{% url 'report_ia:home' %}">Start pagina</a></li>
 	<li><a href="{% url 'report_ia:voorval_create' %}">Nieuw voorval</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 {% if ausr.is_super or ausr.is_admin%}
-	<li><a href="{% url 'report_ia:maatregel_lijst'  %}">Maatregelen</a></li>
+	<li><a href="{% url 'report_ia:voorval_lijst'  %}">Voorvallen</a></li>
 	<li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
 {% endif %}
 {% if ausr.is_super %}
