maatregel create gave an server error, argument voor_id was not passed to the template

--- a/ato/report_ia/templates/maatregel_ingave.html
+++ b/ato/report_ia/templates/maatregel_ingave.html
@@ -28,7 +28,7 @@ $(document).ready(function() {
 <div class="page-menu">
 <ul class="breadcrumb">
       {% if action == 'create' %}	
-	<li><a href="{% url 'report_ia:maatregel_lijst' %} ">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id %} ">Overzicht</a></li>
       {% elif action == 'update' %}
 	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id %} ">Overzicht</a></li>
       {% endif %}
