--- a/ato/report_ia/templates/voorval_ingave_bevestiging.html
+++ b/ato/report_ia/templates/voorval_ingave_bevestiging.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
 
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_list' %}">Overzicht</a></li>
+	<li><a href="{% url 'report_ia:voorval_lijst' %}">Overzicht</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 </ul>
 </div>
