--- a/ato/report_ia/templates/maatregel_lijst.html
+++ b/ato/report_ia/templates/maatregel_lijst.html
@@ -13,7 +13,7 @@
 </div>
 <div class="page-menu">
 <ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:home' %}">Start pagina</a></li>
+	<li><a href="{% url 'report_ia:home' %}">Home pagina</a></li>
 	<li><a href="{% url 'logout' %}">Afmelden</a></li>
 {% if ausr.is_super or ausr.is_admin%}
 	<li><a href="{% url 'report_ia:voorval_lijst' %}">Voorvallen</a></li>
