--- a/ato/report_ia/templates/maatregel_ingave.html
+++ b/ato/report_ia/templates/maatregel_ingave.html
@@ -2,12 +2,6 @@
 {% load bootstrap3 %}
 {% load staticfiles %}
 {% block content %}
-<style type="text/css">
-    .ingave-class{
-    	margin: 20px;
-	body: 900px;
-    }
-</style>
  <script>
 $(document).ready(function() {
 	$('.has-popover').popover({'trigger':'hover'});
@@ -15,39 +9,17 @@ $(document).ready(function() {
 });
   </script>
 
-<div class="page-header">
-	{% if action == 'create' %}
-	<h4><span class="label label-default"> Aanmaken Maatregel</span></h4>
-	{% elif action == 'update' %}
-	<h4><span class="label label-default"> Aanpassen Maatregel</span></h4>
-	{% endif %}
-	<h4><span class="label label-default"> {{user.username}} </span></h4>
-	<h4><span class="label label-default"> {{club}} </span></h4>
-</div>
-
-<div class="page-menu">
-<ul class="breadcrumb">
-      {% if action == 'create' %}	
-	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id %} ">Overzicht</a></li>
-      {% elif action == 'update' %}
-	<li><a href="{% url 'report_ia:maatregel_lijst' voorval_id %} ">Overzicht</a></li>
-      {% endif %}
-	<li><a href="{% url 'logout' %}">Afmelden</a></li>
-</ul>
-</div>
+{% include "navbar_simpel.html" with lijst="maatregel_create"%}
 <div class="ingave-class">
    <form  class="form-vertical" method="POST">
         {% csrf_token %}
         {% bootstrap_form form layout="vertical" %}
 	<button type="submit" class="btn btn-primary">
-	  {% bootstrap_icon "star" %} Opslaan
+	  {% bootstrap_icon "star" %} Opslaan en verzenden
 	</button>
 	<button type="Reset" class="btn">
 	  Reset
 	</button>
-
     </form>
-
-
 </div>
 {% endblock %}
