--- a/ato/report_ia/templates/base.html
+++ b/ato/report_ia/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LVZC ATO</title>
+    <title>LVZC ATO e-IA</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -13,6 +13,12 @@
     {% bootstrap_javascript %}
   </head>
   <body>
+<style type="text/css">
+    .ingave-class{
+    	margin: 20px;
+	body: 900px;
+    }
+</style>
 
    <div class="container">
     {% block content %}
