--- a/ato/report_ia/templates/maatregel_lijst.html
+++ b/ato/report_ia/templates/maatregel_lijst.html
@@ -1,35 +1,11 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 {% block content %}
-<style type="text/css">
-    .ingave-lijst{
-    	margin: 20px;
-    }
-</style>
 
-<div class="ingave-lijst">
-<h4><span class="label label-default"> {{user.username}} </span></h4>
-<h4><span class="label label-default"> {{club}} </span></h4>
-</div>
-<div class="page-menu">
-<ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:home' %}">Home pagina</a></li>
-	<li><a href="{% url 'logout' %}">Afmelden</a></li>
-{% if ausr.is_super or ausr.is_admin%}
-	<li><a href="{% url 'report_ia:voorval_lijst' %}">Voorvallen</a></li>
-	<li><a href="{% url 'report_ia:voorval_export' %}">Exporteren</a></li>
-{% endif %}
-{% if ausr.is_super %}
-	<li><a href="{% url 'admin:index' %}">Administrator</a></li>
-{% endif %}
-</ul>
-</div>
-      
+<div class="ingave-class">
+{% include "navbar_simpel.html" with lijst="maatregel" %}      
 {% if object_list %}
     <div class="ingave-lijst">
-{% if ausr.is_super %}
- <h3>should show all clubs here (only superuser)</h3>
-{% endif %}
 	<table class="table table-bordered">
         <thead>
             <tr>
