--- a/ato/report_ia/templates/starts_ingave_bevestiging.html
+++ b/ato/report_ia/templates/starts_ingave_bevestiging.html
@@ -2,34 +2,13 @@
 {% load bootstrap3 %}
 {% load staticfiles %}
 {% block content %}
-<style type="text/css">
-    .ingave-class{
-    	margin: 20px;
-	body: 900px;
-    }
-</style>
-	  <script type="text/javascript" src="{% static "js/jquery.js" %}" />
- <script>
+<script>
 $(document).ready(function() {
     $('.datepicker').datepicker();
 });
   </script>
-<div class="page-header">
-	{% if action == 'create' %}
-	<h4><span class="label label-default"> Starts ingave </span></h4>
-	{% elif action == 'update' %}
-	<h4><span class="label label-default"> Starts Aanpassen </span></h4>
-	{% endif %}
-	<h4><span class="label label-default"> {{user.username}} </span></h4>
-	<h4><span class="label label-default"> {{club}} </span></h4>
-</div>
 
-<div class="page-menu">
-<ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_lijst' %}">Overzicht</a></li>
-	<li><a href="{% url 'logout' %}">Afmelden</a></li>
-</ul>
-</div>
+{% include "navbar_simpel.html" with lijst="start" %}
 <div class="ingave-class">
 <p>
 	<h2>Het aantal starts werd opgeslagen
