--- a/ato/report_ia/templates/voorval_ingave.html
+++ b/ato/report_ia/templates/voorval_ingave.html
@@ -2,35 +2,13 @@
 {% load bootstrap3 %}
 {% load staticfiles %}
 {% block content %}
-<style type="text/css">
-    .ingave-class{
-    	margin: 20px;
-	body: 900px;
-    }
-</style>
  <script>
 $(document).ready(function() {
 	$('.has-popover').popover({'trigger':'hover'});
 	$('.datepicker').datepicker({'dateFormat':'dd/mm/yy'});
 });
   </script>
-<div class="page-header">
-	{% if action == 'create' %}
-	<h4><span class="label label-default"> Aanmaken </span></h4>
-	{% elif action == 'update' %}
-	<h4><span class="label label-default"> Aanpassen </span></h4>
-	{% endif %}
-	<h4><span class="label label-default"> {{user.username}} </span></h4>
-	<h4><span class="label label-default"> {{club}} </span></h4>
-</div>
-
-<div class="page-menu">
-<ul class="breadcrumb">
-	<li><a href="{% url 'report_ia:voorval_lijst' %}">Overzicht</a></li>
-	<li><a href="{% url 'logout' %}">Afmelden</a></li>
-</ul>
-</div>
-<div class="ingave-class">
+{% include "navbar_simpel.html" with lijst="voorval_create" %}
    <form  class="form-vertical" method="POST">
         {% csrf_token %}
 	{% for field in form %}
