--- a/ato/report_ia/templates/voorval_lijst.html
+++ b/ato/report_ia/templates/voorval_lijst.html
@@ -7,6 +7,7 @@
 {% include "navbar_simpel.html" with lijst="voorval" %}      
 {% if object_list %}
     <div class="ingave-lijst">
+      <div class="table-responsive">
 	<table class="table table-bordered">
         <thead>
             <tr>
@@ -58,6 +59,7 @@
 	  </tbody>
          </table>
 	</div>
+       </div>
 {% else %}
     <p>Er zijn nog geen voorvallen geregistreerd.</p>
 {% endif %}
