--- a/ato/report_ia/templates/voorval_overzicht.html
+++ b/ato/report_ia/templates/voorval_overzicht.html
@@ -11,6 +11,7 @@
 
 {% if object_list %}
     <div class="ingave-lijst">
+      <div class="table-responsive">
 	<table class="table table-bordered">
         <thead>
             <tr>
@@ -28,6 +29,7 @@
 	  </tbody>
          </table>
 	</div>
+      </div>
 {% else %}
     <p>Er zijn nog geen voorvallen geregistreerd.</p>
 {% endif %}
