--- a/ato/report_ia/templates/starts_lijst.html
+++ b/ato/report_ia/templates/starts_lijst.html
@@ -7,6 +7,7 @@
       
 {% if object_list %}
     <div class="ingave-lijst">
+      <div class="table-responsive">
 	<table class="table table-bordered">
         <thead>
             <tr>
@@ -38,6 +39,7 @@
 	  </tbody>
          </table>
 	</div>
+       </div>
 {% else %}
     <p>Er zijn nog geen starts geregistreerd.</p>
 {% endif %}
